crates/sdk/tests/macros/invalid_methods.stderr
error: (calimero)> exposing an async method is not supported
 --> tests/macros/invalid_methods.rs:8:9
  |
8 |     pub async fn method_00(&self) {}
  |         ^^^^^

error: (calimero)> exposing an unsafe method is not supported
 --> tests/macros/invalid_methods.rs:9:9
  |
9 |     pub unsafe fn method_01(&self) {}
  |         ^^^^^^

error[E0277]: (calimero)> no method named `#[app::init]` found for type `MyType`
 --> tests/macros/invalid_methods.rs:4:8
  |
4 | struct MyType;
  |        ^^^^^^ add an `#[app::init]` method to this type
  |
  = help: the trait `AppStateInit` is not implemented for `MyType`
note: required by a bound in `AppState`
 --> src/state.rs
  |
  | pub trait AppState: BorshSerialize + BorshDeserialize + AppStateInit {
  |                                                         ^^^^^^^^^^^^ required by this bound in `AppState`
